layout colour readability quick fix
some buttons/words were hard to read, added more contrast

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -16,12 +16,12 @@ $list: $blue 0%, $blue 33%, $green 33%, $green 66%, $orange 66%, $orange 100%;
 }
 
 // Override default variables.
-$primary: #0aa4ca;
-$secondary: #868686;
+$primary: #006983;
+$secondary: #b1b1b1;
 //$danger: #ffffff;
 
 // Default variable overrides
-$body-bg: #b3b3b3;
+$body-bg: #d6d6d6;
 $body-color: #111;
 
 @import 'bootstrap/scss/bootstrap';
